commit nth time

--- a/how_to_win_friends_and_influence_people.html
+++ b/how_to_win_friends_and_influence_people.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Aladin&display=swap" rel="stylesheet">
+    <link rel="import" href="assets\images">
+    <title>How To Win Friends & Influence People</title>
 </head>
 <body>
     <header>
@@ -23,7 +25,7 @@
             </div>
         </nav>
     </header>
-    <section>
+    <section id="book_details">
         <nav>
             <ul class="breadcrumb">
                 <li><a href="index.html">Home</a></li>
@@ -34,28 +36,28 @@
         </nav>
         <div id="book_detail_images">
             <div>
-                <div>
-                    <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_1-390x510.jpg" alt="">
+                <div id="main_image">
+                    <img src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_2355.jpg" alt="">
                 </div>
                 <div id="book_detail_subimages">
                     <div>
-                        <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_2-390x510.jpg" alt="">
+                        <img src="https://cdn0.fahasa.com/media/catalog/product/h/o/how_to_win_friends_and_influence_people_3_2018_08_22_14_07_47.png" alt="">
                     </div>
                     <div>
-                        <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_4-390x510.jpg" alt="">
+                        <img src="https://cdn0.fahasa.com/media/catalog/product/h/o/how_to_win_friends_and_influence_people_5_2018_08_22_14_07_47.png" alt="">
                     </div>
                     <div>
-                        <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_8-390x510.jpg" alt="">
+                        <img src="https://cdn0.fahasa.com/media/catalog/product/h/o/how_to_win_friends_and_influence_people_6_2018_08_22_14_07_47.png" alt="">
                     </div>
                 </div>
             </div>
             <div id="book_price">
                 <div>
                     <h2><a>Book price</a></h2>
-                    <p>100000 VND</p>
+                    <p><strong>175.000 VND</strong></p>
                 </div>
                 <div>
-                    <button>Add to cart</button>
+                    <button class="clickable">Add to cart</button>
                 </div>
             </div>
         </div>
@@ -63,10 +65,15 @@
     <section>
         <div id="book_description">
             <div>
-
+                <h1><a>How To Win Friends & Influence People by Dale Carnegie</a></h1>
             </div>
             <div>
-
+                <p>
+                    How to Win Friends and Influence People by Dale Carnegie is a self-help classic that reads as a life manual.<br>
+                    <br>The core idea is that you can change other people’s behavior simply by changing your own.<br>
+                    <br>It teaches you the principles to better understand people, become a more likable person, 
+                    improve relationships, win others over, and influence behavior through leadership.
+                </p>
             </div>
         </div>
     </section>
