--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aladin&display=swap" rel="stylesheet">
-    <link rel="icon" href="Pictures">
+    <link rel="import" href="assets\images">
     <title>Beta Online Bookstore</title>
 </head>
 <body>
@@ -26,6 +26,28 @@
         </nav>
     </header>
     <section id="categories">
+        <div class="container">
+            <div id="youtube_video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/6ibCtsHgz3Y" title="The importance of reading books" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            <div id="quotes">
+                <div>
+                    <h1>Top quotes about reading books</h1>
+                </div>
+                <div class="quote_and_author">
+                    <p><strong>Until I feared I would lose it, I never loved to read. One does not love breathing.”</strong></p>
+                    <p>Harper Lee</p>
+                </div>
+                <div class="quote_and_author">
+                    <p><strong>“My alma mater was books, a good library…. I could spend the rest of my life reading, just satisfying my curiosity.”</strong></p>
+                    <p>Malcolm X</p>
+                </div>
+                <div class="quote_and_author">
+                    <p><strong>“We are of opinion that instead of letting books grow moldy behind an iron grating, far from the vulgar gaze, it is better to let them wear out by being read.”</strong></p>
+                    <p>Jules Verne</p>
+                </div>
+            </div>
+        </div>
         <div class="container">
             <div>
                 <h2><a href="fiction.html">Fiction</a></h2>
