--- a/sherlock_holmes_vol1.html
+++ b/sherlock_holmes_vol1.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Aladin&display=swap" rel="stylesheet">
+    <link rel="import" href="assets\images">
+    <title>Sherlock Holmes Volume 1</title>
 </head>
 <body>
     <header>
@@ -35,27 +37,27 @@
         <div id="book_detail_images">
             <div>
                 <div id="main_image">
-                    <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_1-390x510.jpg" alt="">
+                    <img src="https://cdn0.fahasa.com/media/catalog/product/s/h/sherlock_holmes_the_complete_novels_and_stories__vol_1_1_2018_08_22_10_06_11.jpg" alt="">
                 </div>
                 <div id="book_detail_subimages">
                     <div>
-                        <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_2-390x510.jpg" alt="">
+                        <img src="https://cdn0.fahasa.com/media/catalog/product/s/h/sherlock_holmes_the_complete_novels_and_stories__vol_1_2_2018_08_22_10_06_11.png" alt="">
                     </div>
                     <div>
-                        <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_4-390x510.jpg" alt="">
+                        <img src="https://cdn0.fahasa.com/media/catalog/product/s/h/sherlock_holmes_the_complete_novels_and_stories__vol_1_3_2018_08_22_10_06_11.png" alt="">
                     </div>
                     <div>
-                        <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_8-390x510.jpg" alt="">
+                        <img src="https://cdn0.fahasa.com/media/catalog/product/s/h/sherlock_holmes_the_complete_novels_and_stories__vol_1_4_2018_08_22_10_06_11.png" alt="">
                     </div>
                 </div>
             </div>
             <div id="book_price">
                 <div>
                     <h2><a>Book price</a></h2>
-                    <p>100000 VND</p>
+                    <p><strong>126.000 VND</strong></p>
                 </div>
                 <div>
-                    <button>Add to cart</button>
+                    <button class="clickable">Add to cart</button>
                 </div>
             </div>
         </div>
@@ -63,10 +65,23 @@
     <section>
         <div id="book_description">
             <div>
-
+                <h1><a>Sherlock Holmes: The Complete Novels and Stories Volume 1 by Sir Arthur Conan Doyle</a></h1>
             </div>
             <div>
-
+                <p>
+                    Since his first appearance in Beeton’s Christmas Annual in 1887, Sir Arthur Conan Doyle’s Sherlock Holmes has been 
+                    one of the most beloved fictional characters ever created. Now, in two paperback volumes, Bantam presents all 
+                    fifty-six short stories and four novels featuring Conan Doyle’s classic hero - a truly complete collection of 
+                    Sherlock Holmes’s adventures in crime!<br><br>
+                    Volume I includes the early novel A Study in Scarlet, which introduced the eccentric genius of Sherlock Holmes to 
+                    the world. This baffling murder mystery, with the cryptic word Rache written in blood, first brought Holmes 
+                    together with Dr. John Watson. Next, The Sign of Four presents Holmes’s famous “seven percent solution” and the 
+                    strange puzzle of Mary Morstan in the quintessential locked - room mystery. 
+                    <br><br>Also included are Holmes’s feats of extraordinary detection in such famous cases as the chilling “ 
+                    The Adventure of the Speckled Band,” the baffling riddle of “The Musgrave Ritual,” and the ingeniously plotted 
+                    “The Five Orange Pips,” tales that bring to life a Victorian England of horse-drawn cabs, fogs, and the famous lodgings 
+                    at 221B Baker Street, where Sherlock Holmes earned his undisputed reputation as the greatest fictional detective of all time.
+                </p>
             </div>
         </div>
     </section>
