--- a/fiction.html
+++ b/fiction.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aladin&display=swap" rel="stylesheet">
+    <link rel="import" href="assets\images">
     <title>Beta Online Bookstore</title>
 </head>
 <body>
@@ -24,7 +25,7 @@
             </div>
         </nav>
     </header>
-    <section id="categories">
+    <section id="subcategories">
         <div class="container">
             <div>
                 <h2><a>Crime</a></h2>
