--- a/the_fault_in_our_stars.html
+++ b/the_fault_in_our_stars.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aladin&display=swap" rel="stylesheet">
+    <link rel="import" href="assets\images">
     <title>The Fault In Our Stars</title>
 </head>
 <body>
