--- a/journeys_of_a_lifetime.html
+++ b/journeys_of_a_lifetime.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aladin&display=swap" rel="stylesheet">
     <link rel="import" href="assets\images">
-    <title>Document</title>
+    <title>Journey Of A Lifetime</title>
 </head>
 <body>
     <header>
@@ -25,39 +25,39 @@
             </div>
         </nav>
     </header>
-    <section>
+    <section id="book_details">
         <nav>
             <ul class="breadcrumb">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="fiction.html">Non-Fiction</a></li>
                 <li><a href="#">Travel</a></li>
-                <li><a href="journeys_of_a_lifetime.html"></a></li>
+                <li><a href="journeys_of_a_lifetime.html">Journey Of A Lifetime</a></li>
             </ul>
         </nav>
         <div id="book_detail_images">
             <div>
-                <div>
-                    <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_1-390x510.jpg" alt="">
+                <div id="main_image">
+                    <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/journeys_of_a_lifetime_2nd_edition_500_of_the_worlds_greatest_trips/2022_06_01_13_58_54_1-390x510.jpg" alt="">
                 </div>
                 <div id="book_detail_subimages">
                     <div>
-                        <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_2-390x510.jpg" alt="">
+                        <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/journeys_of_a_lifetime_2nd_edition_500_of_the_worlds_greatest_trips/2022_06_01_13_58_54_8-390x510.jpg" alt="">
                     </div>
                     <div>
-                        <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_4-390x510.jpg" alt="">
+                        <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/journeys_of_a_lifetime_2nd_edition_500_of_the_worlds_greatest_trips/2022_06_01_13_58_54_3-390x510.jpg" alt="">
                     </div>
                     <div>
-                        <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_8-390x510.jpg" alt="">
+                        <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/journeys_of_a_lifetime_2nd_edition_500_of_the_worlds_greatest_trips/2022_06_01_13_58_54_11-390x510.jpg" alt="">
                     </div>
                 </div>
             </div>
             <div id="book_price">
                 <div>
                     <h2><a>Book price</a></h2>
-                    <p>100000 VND</p>
+                    <p><strong>714.400 VND</strong></p>
                 </div>
                 <div>
-                    <button>Add to cart</button>
+                    <button class="clickable">Add to cart</button>
                 </div>
             </div>
         </div>
