--- a/sherlock_holmes_vol1.html
+++ b/sherlock_holmes_vol1.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aladin&display=swap" rel="stylesheet">
     <link rel="import" href="assets\images">
+    <link rel="icon" href="assets\images\beta.png">
     <title>Sherlock Holmes Volume 1</title>
 </head>
 <body>
