--- a/fiction.html
+++ b/fiction.html
@@ -54,7 +54,7 @@
             <div class="subcategory_books">
                 <div>
                     <img class="bookimages" src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_1-390x510.jpg" alt="">
-                    <p class="bookname"><a class="clickable" href="the_fault_in_our_stars.html">The fault in our stars</a></p>
+                    <p class="bookname"><a class="clickable" href="the_fault_in_our_stars.html">The Fault In Our Stars</a></p>
                 </div>
                 <div>
                     <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_179418.jpg" alt="">
@@ -73,7 +73,7 @@
             <div class="subcategory_books">
                 <div >
                     <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/t/o/to_kill_a_mockingbird_1_2018_11_02_11_41_49.jpg" alt="">
-                    <p class="bookname"><a class="clickable" href="to_kill_a_mockingbird.html">To kill a mockingbird</a></a></p>
+                    <p class="bookname"><a class="clickable" href="to_kill_a_mockingbird.html">To Kill A Mockingbird</a></a></p>
                 </div>
                 <div>
                     <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/t/h/the_great_gatsby_1_2018_10_27_11_49_37.jpg" alt="">
