commit nth time

--- a/feel_good_food.html
+++ b/feel_good_food.html
@@ -67,10 +67,26 @@
     <section>
         <div id="book_description">
             <div>
-
+                <h1><a>Feel Good Food by Joe Wicks</a></h1>
             </div>
             <div>
+                <p>
+                    I’m Joe Wicks, and it’s my mission to help families everywhere eat better. Because eating well should be easy – for everyone. <br><br>
+                    What we eat each day has a huge impact on how we feel. From an energy-boosting breakfast to satisfying dinners for the whole family, 
+                    the food you eat can transform your day. So I’ve created over 100 recipes to take the stress out of healthy home cooking. 
+                    With nutritious meals designed for energy and balance, this is food that will put a spring in your step and have you feeling your best.
+                    <br><br>
+                    Includes: <br>
+                    - Brilliant breakfasts to start the day right <br>
+                    - Home-cook hacks for when time is tight <br>
+                    - Easy weeknight dinners <br>
+                    - Energy-packed snacks <br>
+                    - Mood-boosting main meals <br>
+                    - Good food to feed a crowd <br>
+                    - Guilt-free sweet treats <br><br>
 
+                    Packed with tasty meals that are quick to get on the table, and that everyone will love, it’s never been easier or simpler to eat well.
+                </p>
             </div>
         </div>
     </section>
