--- a/fiction.html
+++ b/fiction.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aladin&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="import" href="assets\images">
     <link rel="icon" href="assets\images\beta.png">
     <title>Beta Online Bookstore</title>
@@ -29,20 +30,36 @@
     </header>
     <section id="subcategories">
         <div class="container">
+            <div id="youtube_video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/TLZr5GVeLcY" title="Fiction" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            <div id="definition">
+                <h1><a>Fiction</a></h1>
+                <p>
+                    Fiction refers to any type of literature that's created from the imagination and typically has a narrative. It describes 
+                    imaginary events and people. Usually, this comes in the form of books and stories. Narrative writing is one of the three 
+                    types of writing, and it's important to remember that not all narratives are fiction. <br><br>
+                    The word 'fiction' comes from the Latin word 'fictus', which means 'to form' - fiction is stories that are 'formed' and 
+                    created by a writer. <br><br>
+                    There are many types of genres within fiction including mysteries, science fiction, romance, fantasy, and crime thrillers.
+                </p>
+            </div>
+        </div>
+        <div class="container">
             <div>
                 <h2><a>Crime</a></h2>
             </div>
             <div class="subcategory_books">
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/s/h/sherlock_holmes_the_complete_novels_and_stories__vol_1_1_2018_08_22_10_06_11.jpg" alt="fiction_3.jpg">
+                    <img class="bookimages" src="assets\images\fiction_1.jpg" alt="https://cdn0.fahasa.com/media/catalog/product/s/h/sherlock_holmes_the_complete_novels_and_stories__vol_1_1_2018_08_22_10_06_11.jpg">
                     <p class="bookname"><a class="clickable" href="sherlock_holmes_vol1.html">Sherlock Holmes Volume 1</a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/s/h/sherlock_holmes_the_complete_novels_and_stories_volume_ii_1_2018_08_22_10_05_40.jpg" alt="fiction_4.jpg">
+                    <img class="bookimages" src="assets\images\fiction_4.jpg" alt="https://cdn0.fahasa.com/media/catalog/product/s/h/sherlock_holmes_the_complete_novels_and_stories_volume_ii_1_2018_08_22_10_05_40.jpg">
                     <p class="bookname"><a class="non-clickable" href="#">Sherlock Holmes Volume 2</a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/t/h/the_curious_incident_of_the_dog_in_the_night_time_1_2018_10_27_10_16_57.jpg" alt="ficiton_5.jpg">
+                    <img class="bookimages" src="assets\images\fiction_5.jpg" alt="https://cdn0.fahasa.com/media/catalog/product/t/h/the_curious_incident_of_the_dog_in_the_night_time_1_2018_10_27_10_16_57.jpg" alt="https://cdn0.fahasa.com/media/catalog/product/t/h/the_curious_incident_of_the_dog_in_the_night_time_1_2018_10_27_10_16_57.jpg">
                     <p class="bookname"><a class="non-clickable" href="#">The Curious Incident of the DOG in the NIGHT-TIME</a></p>
                 </div>
             </div>
@@ -53,15 +70,15 @@
             </div>
             <div class="subcategory_books">
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_1-390x510.jpg" alt="">
+                    <img class="bookimages" src="assets\images\fiction_2.jpg" alt="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_1-390x510.jpg">
                     <p class="bookname"><a class="clickable" href="the_fault_in_our_stars.html">The Fault In Our Stars</a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_179418.jpg" alt="">
+                    <img class="bookimages" src="" alt="https://cdn0.fahasa.com/media/catalog/product/i/m/image_179418.jpg">
                     <p class="bookname"><a class="non-clickable" href="#">The Book Thief</a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/_/i_have_lost_my_way_1_2019_01_17_08_49_50.jpg" alt="">
+                    <img class="bookimages" src="assets\images\fiction_9.jpg" alt="https://cdn0.fahasa.com/media/catalog/product/i/_/i_have_lost_my_way_1_2019_01_17_08_49_50.jpg">
                     <p class="bookname"><a class="non-clickable" href="#">I Have Lost My Way</a></p>
                 </div>
             </div>
@@ -72,15 +89,15 @@
             </div>
             <div class="subcategory_books">
                 <div >
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/t/o/to_kill_a_mockingbird_1_2018_11_02_11_41_49.jpg" alt="">
+                    <img class="bookimages" src="" alt="https://cdn0.fahasa.com/media/catalog/product/t/o/to_kill_a_mockingbird_1_2018_11_02_11_41_49.jpg">
                     <p class="bookname"><a class="clickable" href="to_kill_a_mockingbird.html">To Kill A Mockingbird</a></a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/t/h/the_great_gatsby_1_2018_10_27_11_49_37.jpg" alt="">
+                    <img class="bookimages" src="" alt="https://cdn0.fahasa.com/media/catalog/product/t/h/the_great_gatsby_1_2018_10_27_11_49_37.jpg">
                     <p class="bookname"><a class="non-clickable" href="#">The Great Gasby</a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/les_miserables/2020_05_04_15_15_06_1-390x510.jpg" alt="">
+                    <img class="bookimages" src="" alt="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/les_miserables/2020_05_04_15_15_06_1-390x510.jpg">
                     <p class="bookname"><a class="non-clickable" href="#">Les Miserables</a></p>
                 </div>
             </div>
