--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </ul>
             </div>
         </nav>
-    </header>
+    </header> 
     <section id="categories">
         <div class="container">
             <div id="youtube_video">
@@ -57,15 +57,15 @@
             </div>
             <div class="category_books">
                 <div>
-                    <img class="homepage_bookimages" src="https://cdn0.fahasa.com/media/catalog/product/t/o/to_kill_a_mockingbird_1_2018_11_02_11_41_49.jpg" alt="">
+                    <img class="homepage_bookimages" src="assets\images\fiction_1.jpg" alt="https://cdn0.fahasa.com/media/catalog/product/t/o/to_kill_a_mockingbird_1_2018_11_02_11_41_49.jpg">
                     <p class="bookname"><a href="to_kill_a_mockingbird.html">To Kill A Mockingbird</a></p>
                 </div>
                 <div>
-                    <img class="homepage_bookimages" src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_1-390x510.jpg" alt="">
+                    <img class="homepage_bookimages" src="assets\images\fiction_2.jpg" alt="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_1-390x510.jpg">
                     <p class="bookname"><a href="the_fault_in_our_stars.html">The Fault In Our Stars</a></p>
                 </div>
                 <div>
-                    <img class="homepage_bookimages" src="https://cdn0.fahasa.com/media/catalog/product/s/h/sherlock_holmes_the_complete_novels_and_stories__vol_1_1_2018_08_22_10_06_11.jpg" alt="">
+                    <img class="homepage_bookimages" src="assets\images\fiction_3.jpg" alt="https://cdn0.fahasa.com/media/catalog/product/s/h/sherlock_holmes_the_complete_novels_and_stories__vol_1_1_2018_08_22_10_06_11.jpg">
                     <p class="bookname"><a href="sherlock_holmes_vol1.html">Sherlock Holmes Volume 1</a></p>
                 </div>
             </div>
@@ -76,15 +76,15 @@
             </div>
             <div class="category_books">
                 <div>
-                    <img class="homepage_bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_2355.jpg" alt="">
+                    <img class="homepage_bookimages" src="assets\images\nonfiction_1.jpg" alt="https://cdn0.fahasa.com/media/catalog/product/i/m/image_2355.jpg">
                     <p class="bookname"><a href="how_to_win_friends_and_influence_people.html">How To Win friends & Influence People</a></p>
                 </div>
                 <div>
-                    <img class="homepage_bookimages" src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/feel_good_food_over_100_healthy_family_recipes/2022_08_23_10_31_48_1-390x510.jpg" alt="">
+                    <img class="homepage_bookimages" src="assets\images\nonfiction_2.jpg" alt="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/feel_good_food_over_100_healthy_family_recipes/2022_08_23_10_31_48_1-390x510.jpg">
                     <p class="bookname"><a href="feel_good_food.html">Feel Good Food: Over 100 Healthy Family Recipes</a></p>
                 </div>
                 <div>
-                    <img class="homepage_bookimages" src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/journeys_of_a_lifetime_2nd_edition_500_of_the_worlds_greatest_trips/2022_06_01_13_58_54_1-390x510.jpg" alt="">
+                    <img class="homepage_bookimages" src="assets\images\nonfiction_4.jpg" alt="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/journeys_of_a_lifetime_2nd_edition_500_of_the_worlds_greatest_trips/2022_06_01_13_58_54_1-390x510.jpg">
                     <p class="bookname"><a href="journeys_of_a_lifetime.html">Journeys Of A Lifetime 2nd Edition: 500 Of The World's Greatest Trips</a></p>
                 </div>
             </div>
