--- a/journeys_of_a_lifetime.html
+++ b/journeys_of_a_lifetime.html
@@ -67,10 +67,23 @@
     <section>
         <div id="book_description">
             <div>
-
+                <h1><a>Journeys Of A Lifetime by National Geographic</a></h1>
             </div>
             <div>
-
+                <p>
+                    This lavish volume reveals National Geographic's top picks for the world's most fabulous journeys, along with practical 
+                    tips for your own travels. Compiled from the favorite trips of National Geographic's travel writers, this inspirational 
+                    book spans the globe to highlight the best of the world's most famous and lesser known sojourns. It presents an incredible 
+                    diversity of possibilities, from ocean cruises around Antarctica to horse treks in the Andes. <br><br> Every continent and every 
+                    possible form of transport is covered. A timely resource for the burgeoning ranks of active travelers who crave adventurous 
+                    and far-flung trips, Journeys of a Lifetime provides scores of creative ideas: trekking the heights of Mt. Kilimanjaro in 
+                    Tanzania... mountain biking in Transylvania... driving through the scenic highlands of Scotland... or rolling through the 
+                    outback on Australia's famous Ghan train... and dozens of other intriguing options all over the world. Journeys of a Lifetime 
+                    also features 22 fun Top 10 lists in all sorts of categories. <br><br> What are the world's top 10 elevator rides, bridges to walk across, 
+                    trolley rides, ancient highways, or underground walking adventures? Readers will love evaluating and debating the selections. 
+                    Each chapter showcases stunning photography, full-color maps, evocative text, and expert advice―including how to get there, 
+                    when to visit, and how to make the most of the journey―all packaged in a luxurious oversize volume to treasure for years to come.
+                </p>
             </div>
         </div>
     </section>
