--- a/non-fiction.html
+++ b/non-fiction.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aladin&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="import" href="assets\images">
     <link rel="icon" href="assets\images\beta.png">
     <title>Beta Online Bookstore</title>
@@ -29,20 +30,35 @@
     </header>
     <section id="subcategories">
         <div class="container">
+            <div id="youtube_video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/b0vbptjyW8M" title="Non-Fiction" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            <div id="definition">
+                <h1><a>Non-Fiction</a></h1>
+                <p>
+                    Nonfiction is literature that, regardless of the subject matter, has a simple goal: to provide information. 
+                    It should be based on facts and conclusions of the author’s research or expertise, as opposed to the creativity of 
+                    the author’s imagination. <br><br>Granted, storytelling skills are required when writing a great work of nonfiction, but the 
+                    content is still expected to be accurate. In addition to this, modern nonfiction is prose — writing that sounds like everyday 
+                    speech and is not written in meter, like poetry.
+                </p>
+            </div>
+        </div>
+        <div class="container">
             <div>
                 <h2><a>Personal Development</a></h2>
             </div>
             <div class="subcategory_books">
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_2355.jpg" alt="">
+                    <img class="bookimages" src="assets\images\nonfiction_1.jpg" alt="https://cdn0.fahasa.com/media/catalog/product/i/m/image_2355.jpg">
                     <p class="bookname"><a class="clickable" href="how_to_win_friends_and_influence_people.html">How to Win Friends & Influence People</a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/h/o/how_to_stop_worrying_start_living_1_2018_08_22_14_07_53.jpg" alt="">
+                    <img class="bookimages" src="" alt="https://cdn0.fahasa.com/media/catalog/product/h/o/how_to_stop_worrying_start_living_1_2018_08_22_14_07_53.jpg">
                     <p class="bookname"><a class="non-clickable" href="#">How to Stop Worrying & Start Living</a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/t/h/the_power_of_habit_1_2018_11_03_10_20_23.jpg" alt="">
+                    <img class="bookimages" src="" alt="https://cdn0.fahasa.com/media/catalog/product/t/h/the_power_of_habit_1_2018_11_03_10_20_23.jpg">
                     <p class="bookname"><a class="non-clickable" href="#">The Power Of Habit</a></p>
                 </div>
             </div>
@@ -53,15 +69,15 @@
             </div>
             <div class="subcategory_books">
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/journeys_of_a_lifetime_2nd_edition_500_of_the_worlds_greatest_trips/2022_06_01_13_58_54_1-390x510.jpg" alt="">
+                    <img class="bookimages" src="assets\images\nonfiction_4.jpg" alt="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/journeys_of_a_lifetime_2nd_edition_500_of_the_worlds_greatest_trips/2022_06_01_13_58_54_1-390x510.jpg">
                     <p class="bookname"><a class="clickable" href="journeys_of_a_lifetime.html">Journeys Of A Lifetime 2nd Edition: 500 Of The World's Greatest Trips</a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/national_geographic_complete_national_parks_of_europe_460_parks__including_flora_and_fauna__historic_sites__scenic_hiking_trails__and_more/2022_06_01_13_59_01_1-390x510.jpg" alt="">
+                    <img class="bookimages" src="" alt="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/national_geographic_complete_national_parks_of_europe_460_parks__including_flora_and_fauna__historic_sites__scenic_hiking_trails__and_more/2022_06_01_13_59_01_1-390x510.jpg">
                     <p class="bookname"><a class="non-clickable" href="#">National Geographic Complete National Parks Of Europe</a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/d/r/drives_of_a_lifetime_2nd_edition_500_of_the_worlds_greatest_road_trips_1_2022_06_01_13_59_08.jpg" alt="">
+                    <img class="bookimages" src="" alt="https://cdn0.fahasa.com/media/catalog/product/d/r/drives_of_a_lifetime_2nd_edition_500_of_the_worlds_greatest_road_trips_1_2022_06_01_13_59_08.jpg">
                     <p class="bookname"><a class="non-clickable" href="#">Drives Of A Lifetime 2nd Edition: 500 Of The World's Greatest Road Trips</a></p>
                 </div>
             </div>
@@ -72,15 +88,15 @@
             </div>
             <div class="subcategory_books">
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/feel_good_food_over_100_healthy_family_recipes/2022_08_23_10_31_48_1-390x510.jpg" alt="">
+                    <img class="bookimages" src="assets\images\nonfiction_2.jpg" alt="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/feel_good_food_over_100_healthy_family_recipes/2022_08_23_10_31_48_1-390x510.jpg">
                     <p class="bookname"><a class="clickable" href="feel_good_food.html">Feel Good Food: Over 100 Healthy Family Recipes</a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/tasty_as_fck_easy_recipes_for_when_youre_really_fcking_hungry/2021_08_02_13_58_16_1-390x510.jpg" alt="">
+                    <img class="bookimages" src="" alt="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/tasty_as_fck_easy_recipes_for_when_youre_really_fcking_hungry/2021_08_02_13_58_16_1-390x510.jpg">
                     <p class="bookname"><a class="non-clickable" href="#">Tasty As F*ck: Easy Recipes For When You'Re Really F*cking Hungry</a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/cooking_with_japanese_pickles_97_quick__classic_and_seasonal_recipes/2022_08_09_14_11_40_1-390x510.jpg" alt="">
+                    <img class="bookimages" src="" alt="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/cooking_with_japanese_pickles_97_quick__classic_and_seasonal_recipes/2022_08_09_14_11_40_1-390x510.jpg">
                     <p class="bookname"><a class="non-clickable" href="#">Cooking With Japanese Pickles: 97 Quick, Classic And Seasonal Recipes</a></p>
                 </div>
             </div>
